# MBEDAI

./: CMakeLists.txt  README.md
Dlib/: install-dlib.sh
OpenCV/: install-opencv.sh
include/popen2/: popen2.c
include/rtsp/xop/: AACSource.cpp  AACSource.h  DigestAuthentication.cpp  media.h
include/websocket/: CMakeLists.txt  chat.htm  network_interface.cpp  test.html  websocket.cpp  websocketserver
include/websocket/demo/: demo.cpp
src/: Buffer.h  CMakeCache.txt  Caffe.h  Detection.cpp  Detection.h  DlibFaces.h  FacesRecog.h  Graphic.cpp  Graphic.h  MaskRCNN.h  SSDMobile.h  SVM.h  Tensorflow.h  Tracker.h  WebSocket.h  YOLO.h  YOLOTraffic.h  color_text.h  ctrl.cpp  ctrl.h  ffmpeg_lib.h  fileManager.h  main.cpp  rtsp_stream.h  utils.h
